--- a/CONNECTOR.ipynb
+++ b/CONNECTOR.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c51a6ab3-deae-406d-9dd4-17116f552644",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
     "\n",
     "# Open ngrok tunnel\n",
     "from pyngrok import ngrok, conf\n",
-    "conf.get_default().auth_token = \"2vgiATxPo2kgJNHSYXh0KOJIymB_7mNJ7dKvB1WPivKaLT26H\"\n",
+    "conf.get_default().auth_token = \"\"\n",
     "public_url = ngrok.connect(5000)\n",
     "print(f\"🔥 Your bot is live at: {public_url}\")\n",
     "\n",
